Cookie Handler GTM Template version 1.0.1
metadata.yaml updated with the latest version with the clean version

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,5 +2,5 @@ homepage: "https://www.cookiehandler.io"
 documentation: "https://www.cookiehandler.io/docs"
 versions:
   # latest version
-  - sha:  a
+  - sha:  a707dd472d063e988dcaef49acfc9e77b9e1a26c
     changeNotes: Initial Commit with APACHE 2.0 License
