--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,13 @@
 homepage: "https://www.cookiehandler.io"
 documentation: "https://www.cookiehandler.io/docs"
 versions:
+  - version: 1.0.2 # CURRENT
+    
   # latest version
-  - sha:  a707dd472d063e988dcaef49acfc9e77b9e1a26c
+  - version: 1.0.1
+    sha:  2d24054bb427035f571db71cd83613df5db5fda3
+    changeNotes: metadata.yaml updated with the latest version with the clean version
+
+  - version: 1.0.0
+    sha:  a707dd472d063e988dcaef49acfc9e77b9e1a26c
     changeNotes: Initial Commit with APACHE 2.0 License
