--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,16 +1,12 @@
 homepage: "https://www.cookiehandler.io"
 documentation: "https://www.cookiehandler.io/docs"
 versions:
-  - version: 1.0.3 # CURRENT
-    
   # latest version
-  - version: 1.0.2
-    sha:  b9eefe316518007fdc344c4cc87b4501337aae1c
+  - sha: a03f4e714bdf7f75d89a5f0c38c8774e94d26741
+    changeNotes: refactored the way the set window is defined
+  - sha:  b9eefe316518007fdc344c4cc87b4501337aae1c
     changeNotes: Updated CDN bucket and branding name for template variables
-  - version: 1.0.1
-    sha:  2d24054bb427035f571db71cd83613df5db5fda3
+  - sha:  2d24054bb427035f571db71cd83613df5db5fda3
     changeNotes: metadata.yaml updated with the latest version with the clean version
-
-  - version: 1.0.0
-    sha:  a707dd472d063e988dcaef49acfc9e77b9e1a26c
+  - sha:  a707dd472d063e988dcaef49acfc9e77b9e1a26c
     changeNotes: Initial Commit with APACHE 2.0 License
