--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,6 +2,8 @@ homepage: "https://www.cookiehandler.io"
 documentation: "https://www.cookiehandler.io/docs"
 versions:
   # latest version
+  - sha: 11e12a6b23e80131dce74cf73a4d39334728e328
+    changeNotes: Allow users to select if they want the banner to push the default consent state
   - sha: a03f4e714bdf7f75d89a5f0c38c8774e94d26741
     changeNotes: refactored the way the set window is defined
   - sha:  b9eefe316518007fdc344c4cc87b4501337aae1c
